seo 	modified:   application/config/product/config.php 	modified:   application/index/controller/Index.php 	modified:   application/index/controller/User.php 	modified:   application/index/view/index/about.html 	modified:   application/index/view/index/search.html 	modified:   application/index/view/partials/header.html 	modified:   application/index/view/partials/user_header.html

--- a/application/index/view/index/about.html
+++ b/application/index/view/index/about.html
@@ -8,8 +8,8 @@
     <article class="markdown-body">
         <h2 id="bootcdn-">法人堂</h2>
         <div class="row about-info">
-        <p>法人堂是河南斯沃琪网络科技有限公司旗下的一款企业征信产品，旨在为用户提供快速查询企业工商信息服务。目前法人堂已收录中国境内合法注册的3000万企业信息。法人堂致力于提供简单、可靠、更真实的企业信息检索查询服务。</p>
-        <blockquote><p>反馈或建议请发送邮件至：farentang@sina.com</p></blockquote>
+        <p>法人堂是河南斯沃琪网络科技有限公司旗下的一款企业综合信息查询产品，旨在为用户提供企业法人信息快速检索服务。目前法人堂已收录中国境内合法注册的3000余万企业法人信息。法人堂，致力于提供简单、可靠、真实的法人信息、信用信息、联系方式检索服务</p>
+        <blockquote><p>反馈或建议请发送邮件至：farentang@163.com</p></blockquote>
         </div>
         <h2 id="-">联系我们</h2>
         <style type="text/css">
@@ -22,17 +22,14 @@
                     text-align: left;
                 }
                 .map {
-                    #margin-top: 20px;
                     max-width: inherit;
                     height: 320px;
-                    #margin-left: 20px;
                 }
                 #allmap img{
                     max-width: inherit;
                 }
                 .changde-contactus-info {
                     margin: 20px 0px 0px 0px;
-                    #border: 1px solid #CCC;
                     overflow: hidden;
                 }
                 .about-info {
@@ -55,15 +52,15 @@
                 }
             </style>
             <div class="row changde-contactus-info">
-            <div class="col-lg-4 col-xs-4 contact-box">
+            <div class="col-md-4 col-lg-4 col-xs-4 contact-box">
                 <p><strong>河南斯沃琪网络科技有限公司</strong></p>
                 <p><i class="icon-phone-sign"></i>&nbsp; &nbsp;电话：0371-66616992</p>
                 <p><i class="icon-phone"></i>&nbsp; &nbsp;传真：0371-66616992</p>
-                <p><i class="icon-envelope-alt"></i>&nbsp; &nbsp;邮箱：farentang@sina.com</p>
+                <p><i class="icon-envelope-alt"></i>&nbsp; &nbsp;邮箱：farentang@163.com</p>
                 <p><i class="icon-ie"></i>&nbsp; &nbsp;官网：http://www.yuchenkonggu.com/</p>
                 <p><i class="icon icon-map-marker"></i>&nbsp; &nbsp;公司地址：郑州市管城区紫荆山路56号14层1404号</p>
             </div>
-            <div id="allmap" class="col-lg-8 col-xs-8 map"></div>
+            <div id="allmap" class="col-md-8 col-lg-8 col-xs-8 map"></div>
         </div>
     </article>
 </main>
