--- a/application/index/view/index/search.html
+++ b/application/index/view/index/search.html
@@ -86,7 +86,7 @@
         <?php }else{?>
           <div class="item">
             <div class="item-content text-center" style="padding: 15px 0;">
-                  暂未查询到 <span class="text-danger"><?php echo htmlspecialchars($keyword);?> </span> 相关信息,建议您使用更详细的关键词进行搜索
+                  暂未查询到 <span class="text-danger"><?php echo htmlspecialchars($keyword);?> </span> 相关信息,建议您输入更详细的关键词进行搜索
             </div>
           </div>
         <?php }?>
