--- a/application/index/view/user/login.html
+++ b/application/index/view/user/login.html
@@ -21,7 +21,7 @@
         <button class="btn btn-main" type="submit">登 录</button>
       </div>
       <div class="options">
-        <div class="forgot-password"><a href="/users/password/new">忘记密码？</a></div>
+        <div class="forgot-password"><a href="/user/forget">忘记密码？</a></div>
         <div class="checkbox remember-me">
           <label>
             记住我 <input class="rember-checkbox" type="checkbox" name="remember" value="1">
