--- a/application/index/view/index/detail.html
+++ b/application/index/view/index/detail.html
@@ -16,7 +16,10 @@
               }else{
                   $label = 'label-success';
               }?>
-              <h1><?php echo $company->comname;?> <span class="label <?php echo $label;?>" style="font-size: 14px;"><?php echo $company->status;?></span></h1>
+              <h1 style="line-height: 1;"><?php echo $company->comname;?> <span class="label <?php echo $label;?>" style="font-size: 14px;"><?php echo $company->status;?></span>
+<div class="bdsharebuttonbox pull-right"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a></div>
+<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"16"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
+              </h1>
               <dl class="dl-inline">
                 <dt>法定代表人：</dt>
                 <dd><?php echo $company->opername;?></dd>
@@ -39,7 +42,6 @@
                   }
               ?>
                 <dd><?php echo $year;?></dd>
-                <dt><br></dt>
                 <dd class="pull-right"> <span class="label <?php echo $label;?>"><?php echo $company->status;?></span> <span class="label label-info"><?php echo $company->econkind;?></span> <span class="label label-danger"><i class="icon-eye-open"></i> 235</span></dd>
               </dl>
               <section class="abstract">
